--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/frontend/public/image/ico/checkbox_10547824.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Vite App</title>
+    <title>ITB-KK-US3</title>
     <style>
     </style>
   </head>
